--- a/comming-soon/index.html
+++ b/comming-soon/index.html
@@ -1,1 +1,27 @@
 <!DOCTYPE html>
+<html lang=en>
+<head>
+<meta charset=UTF-8>
+<meta name=viewport content="width-device-width, initial-scale=1">
+<link rel=stylesheet media=screen href=css/main.css>
+<title>AhaKnow:Coming Soon</title>
+</head>
+<body>
+<div class=background-image>
+<div class="top-text en-style">
+<p>AhaKnow</p>
+</div>
+<div class="middle-text en-style">
+<h1 class=big-text>I am building...</h1>
+<hr>
+<p class=num-style id=countDown> </p>
+</div>
+<div class=bottom-text>
+<p class=en-style>Human stupidity, thatâ€™s why I keep learning.</p>
+</div>
+</div>
+<footer>
+<script src=js/main.js></script>
+</footer>
+</body>
+</html>
