--- a/comming-soon/index.html
+++ b/comming-soon/index.html
@@ -17,7 +17,7 @@
 <p class=num-style id=countDown> </p>
 </div>
 <div class=bottom-text>
-<p class=en-style>Human stupidity, thatâ€™s why I keep learning.</p>
+<p class=en-style>Human stupidity, that’s why I keep learning.</p>
 </div>
 </div>
 <footer>
